--- a/html/templates/lista_lotes.html
+++ b/html/templates/lista_lotes.html
@@ -22,7 +22,7 @@
                     <a class="btn btn-primary filtar-btn" id="filtro"><i class="fa fa-fw fa-filter"></i> Filtrar</a>
                 </div>
               </div>
-          </div><br><br>
+          </div><br>
           <div class="row">
 
             <div class="col-md-3 col-sm-6 hero-feature">
