--- a/html/templates/minhas_compras.html
+++ b/html/templates/minhas_compras.html
@@ -42,11 +42,11 @@
             <table class="table table-striped table-bordered">
               <thead>
                 <tr>
-                  <th><a title="Ordenar pelo pedido" href="#">Pedido <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
-                  <th><a title="Ordenar pelo Produto" href="#">Produto <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
-                  <th class="center"><a title="Ordenar pela Data de Envio" href="#">Data de Envio <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
-                  <th class="center"><a title="Ordenar pela Quantidade" href="#">Quantidade <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
-                  <th class="center"><a title="Ordenar pelo Status" href="#">Status <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th><a title="Ordenar pelo pedido" href="javascript:void(0);">Pedido <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th><a title="Ordenar pelo Produto" href="javascript:void(0);">Produto <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th class="center"><a title="Ordenar pela Data de Envio" href="javascript:void(0);">Data de Envio <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th class="center"><a title="Ordenar pela Quantidade" href="javascript:void(0);">Quantidade <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th class="center"><a title="Ordenar pelo Status" href="javascript:void(0);">Status <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   <th class="center">Ações</th>
                 </tr>
               </thead>
