--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -50,7 +50,6 @@
 
 <body id="page-top" class="lista-usuarios sistema">
     <header class="bs-docs-nav navbar navbar-static-top header-sistema" id="top">
-        <div class="container">
             <div class="navbar-header">
                 <button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
                     <span class="sr-only">Toggle navigation</span>
@@ -84,7 +83,11 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="{% block lotes-u %}{% endblock %}">
+
+                    <li>
+                        <a href="#" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
+                    </li>
+                     <li class="{% block lotes-u %}{% endblock %}">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-shopping-bag"></i> {% trans "Loja" %} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -95,9 +98,6 @@
                                 <a href="/loja/minhas-compras"><i class="fa fa-fw fa-shopping-basket"></i> {% trans "Minhas compras" %}</a>
                             </li>
                         </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
                     </li>
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
                     <li class="dropdown">
@@ -121,7 +121,7 @@
                     {% endif %}
                     {% if user|has_shipment_perm:'view_shipments' or user|has_shipment_perm:'add_shipment' %}
                     <li class="dropdown ">
-                        <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-share"></i> {% trans "Envio" %} <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-amazon"></i> {% trans "Envios EUA" %} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             {% if user|has_shipment_perm:'view_shipments' %}
                             <li class="{% block listashipment %}{% endblock %}">
@@ -139,6 +139,25 @@
                         </ul>
                     </li>
                     {% endif %}
+
+                    <!-- menu envio para brasil -->
+
+                    <li class="dropdown ">
+                        <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-globe"></i> {% trans "Envios Brasil" %} <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li class="{% block enviobrasil %}{% endblock %}">
+                                <a href="/envios-brasil"><i class="fa fa-fw fa-list-alt"></i> {% trans "Lista de Envios" %}</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="{% block criarenviobrasil %}{% endblock %}">
+                                <a href="/envio-brasil/cadastro"><i class="fa fa-fw fa-plus-square"></i> {% trans "Criar Envio" %}</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <!-- fim menu envio brasil -->
+
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><span class="glyphicon glyphicon-cog "></span>  {% trans "Olá" %}, {{ user.first_name }} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -153,7 +172,6 @@
                     </li>
                 </ul>
             </nav>
-        </div>
     </header>
 
     {% block conteudo %}Conteudo pagina{% endblock %}
@@ -218,7 +236,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <h3>{% trans "Veja como funciona o envio (Redirecionamento) na nossa plataforma" %}</h3>
-                                    <iframe src="https://www.youtube.com/embed/9Ikxuy0rSYY?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/rluVgSS2hbI?autoplay=0&amp;rel=0&amp;modestbranding=1&amp;showinfo=0&amp;controls=1&amp;hd=1" frameborder="0" width="100%" height="300"></iframe>
                                 </div>
                             </div>
                         </div>
