--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -81,16 +81,16 @@
             <table class="table table-striped table-bordered">
               <thead>
                 <tr>
-                  <th><a title="Ordenar pelo Id" href="#">{{ id }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
-                  <th><a title="Ordenar pelo nome" href="#">{{ name }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th><a title="Ordenar pelo Id" href="javascript:void(0);">{{ id }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th><a title="Ordenar pelo nome" href="javascript:void(0);">{{ name }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   <th>{% trans "Data de Envio" %}</th>
-                  <th class="center"><a title="Ordenar pela quantidade" href="#">{% trans "Quantidade" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th class="center"><a title="Ordenar pela quantidade" href="javascript:void(0);">{% trans "Quantidade" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   {% if user|has_user_perm:'view_users' %}
                   <!-- somente admin visualiza -->
-                  <th class="center"><a title="Ordenar pelo usuario" href="#">{{ user_label }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th class="center"><a title="Ordenar pelo usuario" href="javascript:void(0);">{{ user_label }} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   <!-- fim campo -->
                   {% endif %}
-                  <th class="center"><a title="Ordenar pelo status" href="#">{% trans "Status" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
+                  <th class="center"><a title="Ordenar pelo status" href="javascript:void(0);">{% trans "Status" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a></th>
                   {% if user|has_shipment_perm:'add_shipment' %}
                   <th class="center">{% trans "Envio" %}</th>
                   {% endif %}
