--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -99,7 +99,7 @@
                         </ul>
                     </li>
 {% endcomment %}
-                    <li>
+                    <li class="tutorial">
                         <a href="#" class="abre-tutorial"><i class="fa fa-leanpub"></i> {% trans "Tutorial Plataforma" %}</a>
                     </li>
                     {% if user|has_product_perm:'view_products' or user|has_product_perm:'add_product' %}
@@ -124,7 +124,7 @@
                     {% endif %}
                     {% if user|has_shipment_perm:'view_shipments' or user|has_shipment_perm:'add_shipment' %}
                     <li class="dropdown ">
-                        <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-share"></i> {% trans "Envio" %} <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-share"></i> {% trans "Envios EUA" %} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             {% if user|has_shipment_perm:'view_shipments' %}
                             <li class="{% block listashipment %}{% endblock %}">
@@ -142,6 +142,22 @@
                         </ul>
                     </li>
                     {% endif %}
+
+                    <!-- Menu envio Brasil-->
+
+                    <li class="dropdown ">
+                        <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><i class="fa fa-globe"></i> {% trans "Envios Brasil" %} <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li class="{% block enviobrasil %}{% endblock %}">
+                                <a href="/envios-brasil"><i class="fa fa-fw fa-list-alt"></i> {% trans "Lista de Envios" %}</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li class="{% block criarenviobrasil %}{% endblock %}">
+                                <a href="/envio-brasil/cadastro"><i class="fa fa-fw fa-plus-square"></i> {% trans "Criar Envio" %}</a>
+                            </li>
+                        </ul>
+                    </li>
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown"><span class="glyphicon glyphicon-cog "></span>  {% trans "Olá" %}, {{ user.first_name }} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
